# resume-maker

./: docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
backend/app/routers/: ats.py  auth.py  importers.py  resumes.py  share.py  versions.py
backend/app/services/: ats_engine.py  imports.py  latex.py  openai_ai.py
frontend/: Dockerfile  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: ResumeEditor.tsx  TemplatePicker.tsx
frontend/src/styles/: globals.css
