[project]
name = "ai-resume-lab"
version = "0.1.0"
dependencies = [
  "fastapi[all]==0.111.0",
  "uvicorn[standard]==0.30.1",
  "SQLAlchemy==2.0.30",
  "psycopg[binary]==3.1.19",
  "alembic==1.13.2",
  "python-multipart==0.0.9",
  "pydantic==2.7.4",
  "jinja2==3.1.4",
  "pylatexenc==2.10",
  "python-dotenv==1.0.1",
  "httpx==0.27.0"
]
